# simppeliTCU

./: .gitignore  INSTALLATION.md  LICENSE  README.md  README_FI.md
.github/workflows/: build.yml
docs/: INSTALLATION.md  IoTMQTTPanel-simppeliTCU.json  can.md  compiling.md  flashing.md  mqtt.md
simppeliTCU/: canInterface.cpp  canInterface.h  canLeafZE1.cpp  canLeafZE1.h  cliParser.cpp  cliParser.h  configuration.cpp  configuration.h  mqttInterface.cpp  mqttInterface.h  simppeliTCU.ino  stringBuffer.h  ui.h  vehicleTypes.h
test/: CMakeLists.txt  test_canInterface_stubs.cpp  test_canLeafZE1_parsing.cpp
